<resources>
    <string name="app_name">쿠포닝 사장님</string>
    <string name="app_logo">CouponOwning</string>
    <string name="kakao">loginByKakao</string>
    <string name="google">loginByGoogle</string>
    <string name="coupowning">쿠포닝</string>
    <string name="setting">설정</string>
    <string name="logo">logo</string>
    <string name="storeimage">storeImage</string>
    <string name="introduce">소개</string>
    <string name="ceoname">대표자 성명</string>
    <string name="stampsum">총 스탬프 개수</string>
    <string name="benefit">혜택</string>
    <string name="address">주소</string>
    <string name="registerstore">가게 등록</string>
    <string name="modifystore">가게 수정</string>
    <string name="num">개</string>
    <string name="registrationnum">사업자 등록번호</string>
    <string name="opendate">개업 일자</string>
    <string name="certificate">인증</string>
    <string name="barcode_value">Barcode Value:</string>
    <string name="item_list">사진리스트</string>
    <string name="camerabutton">카메라버튼</string>
    <string name="plus">적립</string>
    <string name="minus">차감</string>
    <string name="back">뒤로가기</string>
    <string name="plusdiscription">적립할 도장 개수</string>
    <string name="minusbutton">차감</string>
    <string name="finish">완료</string>
    <string name="logout">로그아웃</string>
    <string name="leave">회원탈퇴</string>
    <string name="inquiry">문의 : ohksj77@naver.com</string>
    <string name="line">line</string>
    <string name="search">search</string>
    <string name="phonenum">전화번호</string>
    <string name="storename">가게 이름</string>
    <string name="apply">등록</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="one">1</string>
</resources>