<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".certified.SettingActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/white"
        app:contentInsetStart="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="41dp"
            android:layout_gravity="start"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:contentDescription="@string/back"
            android:src="@drawable/back"
            app:layout_constraintTop_toTopOf="parent"
            android:id="@+id/back"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setting"
            android:textColor="@color/black"
            android:fontFamily="@font/suncheonb"
            />

    </androidx.appcompat.widget.Toolbar>

    <Button
        android:id="@+id/logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="43dp"
        android:layout_marginTop="30dp"
        android:backgroundTint="@color/white"
        android:fontFamily="@font/suncheonb"
        android:text="@string/logout"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <Button
        android:id="@+id/leave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="43dp"
        android:layout_marginTop="22dp"
        android:backgroundTint="@color/white"
        android:fontFamily="@font/suncheonb"
        android:text="@string/leave"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logout" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="43dp"
        android:layout_marginTop="22dp"
        android:fontFamily="@font/nanumgothic"
        android:text="@string/inquiry"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/leave" />

</androidx.constraintlayout.widget.ConstraintLayout>