<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:outlineProvider="bounds"
    tools:context=".certified.AccumulateActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/white"
        app:contentInsetStart="0dp"
        app:layout_constraintTop_toTopOf="parent"
        android:elevation="20dp"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="31dp"
            android:layout_gravity="start"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:contentDescription="@string/back"
            android:src="@drawable/back"
            app:layout_constraintTop_toTopOf="parent"
            android:id="@+id/back"/>
    </androidx.appcompat.widget.Toolbar>

    <RadioGroup
        android:id="@+id/radiogroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="122dp"
        android:layout_marginTop="221dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <RadioButton
            android:id="@+id/rdplus"
            android:button="@null"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableRight="@drawable/radiobutton"
            android:layout_marginEnd="50dp"
            android:checked="true"
            android:text="@string/plus" />

        <RadioButton
            android:id="@+id/rdminus"
            android:button="@null"
            android:layout_width="wrap_content"
            android:drawableRight="@drawable/radiobutton"
            android:layout_height="wrap_content"
            android:text="@string/minus" />
    </RadioGroup>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="96dp"
        android:layout_marginTop="46dp"
        android:fontFamily="@font/suncheonb"
        android:text="@string/plusdiscription"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radiogroup" />

    <ImageButton
        android:id="@+id/minus"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginStart="17dp"
        android:layout_marginTop="46dp"
        android:elevation="20dp"
        android:background="@drawable/splash_round"
        android:src="@drawable/minus"
        android:scaleType="centerCrop"
        android:foreground="?android:attr/selectableItemBackground"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/radiogroup"
        android:contentDescription="@string/minusbutton" />

    <TextView
        android:id="@+id/numofstamp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/nanumgothic"
        android:text="@string/one"
        android:textColor="@color/black"
        app:layout_constraintStart_toEndOf="@+id/minus"
        app:layout_constraintTop_toBottomOf="@+id/radiogroup" />

    <ImageButton
        android:id="@+id/plus"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:scaleType="centerCrop"
        android:layout_marginStart="18dp"
        android:layout_marginTop="46dp"
        android:elevation="20dp"
        android:background="@drawable/splash_round"
        android:src="@drawable/plus"
        android:contentDescription="@string/plus"
        android:foreground="?android:attr/selectableItemBackground"
        app:layout_constraintStart_toEndOf="@+id/numofstamp"
        app:layout_constraintTop_toBottomOf="@+id/radiogroup" />

    <ImageButton
        android:id="@+id/finish"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_marginStart="155dp"
        android:layout_marginTop="42dp"
        android:background="@drawable/finish"
        android:foreground="?android:attr/selectableItemBackground"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/minus"
        android:contentDescription="@string/finish" />

</androidx.constraintlayout.widget.ConstraintLayout>