<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".certified.InquireActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/white"
        app:contentInsetStart="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <ImageView
            android:id="@+id/stampimage"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="5dp"
            android:contentDescription="@string/logo"
            android:src="@drawable/stamp" />

        <TextView
            android:fontFamily="@font/suncheonb"
            android:id="@+id/coupowning"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="@string/coupowning"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/settingimage"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="265dp"
            android:contentDescription="@string/setting"
            android:src="@drawable/setting" />


    </androidx.appcompat.widget.Toolbar>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/storeimage"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="80dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/storename"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="284dp"
        android:text="카페 302"
        android:textColor="@color/blue"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:fontFamily="@font/suncheonb"
        android:id="@+id/introduce"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="20dp"
        android:text="@string/introduce"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/storename" />

    <EditText
        android:id="@+id/intro"
        android:layout_width="195dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="12dp"
        android:minHeight="48dp"
        app:layout_constraintBottom_toTopOf="@+id/stamp"
        app:layout_constraintStart_toEndOf="@+id/introduce" />

    <TextView
        android:fontFamily="@font/suncheonb"
        android:id="@+id/stamp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="22dp"
        android:text="@string/stampsum"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/introduce" />

    <EditText
        android:id="@+id/stampsum"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="40dp"
        app:layout_constraintStart_toEndOf="@+id/stamp"
        app:layout_constraintTop_toTopOf="@+id/intro" />

    <TextView
        android:id="@+id/benefit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="19dp"
        android:fontFamily="@font/suncheonb"
        android:text="@string/benefit"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/stamp" />

    <EditText
        android:id="@+id/num"
        android:layout_width="105dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="7dp"
        android:layout_marginBottom="5dp"
        android:autofillHints="no"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/addr"
        app:layout_constraintStart_toEndOf="@+id/numofstamp"
        tools:ignore="LabelFor" />

    <TextView
        android:id="@+id/numofstamp"
        android:layout_width="wrap_content"
        android:layout_height="16dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/suncheonb"
        android:text="@string/num"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/award"
        app:layout_constraintTop_toBottomOf="@+id/stampsum" />

    <EditText
        android:id="@+id/award"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:autofillHints="no"
        android:inputType="text"
        app:layout_constraintStart_toEndOf="@+id/benefit"
        app:layout_constraintTop_toBottomOf="@+id/stamp"
        tools:ignore="LabelFor" />

    <TextView
        android:fontFamily="@font/suncheonb"
        android:id="@+id/address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="28dp"
        android:text="@string/address"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/benefit" />

    <EditText
        android:id="@+id/addr"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        app:layout_constraintStart_toEndOf="@+id/address"
        app:layout_constraintTop_toBottomOf="@+id/award"
        android:inputType="text"
        android:autofillHints="no"
        tools:ignore="LabelFor" />

    <ImageView
        android:fontFamily="@font/suncheonb"
        android:id="@+id/modifystore"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_marginEnd="27dp"
        android:contentDescription="@string/registerstore"
        android:src="@drawable/registerstore"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/addr"
        app:layout_constraintTop_toBottomOf="@+id/addr" />


</androidx.constraintlayout.widget.ConstraintLayout>